RESOLVED FIXED256423
[Win] LayoutUnit.h(84) : warning C4756: overflow in constant arithmetic
https://bugs.webkit.org/show_bug.cgi?id=256423
Summary [Win] LayoutUnit.h(84) : warning C4756: overflow in constant arithmetic
Fujii Hironori
Reported 2023-05-06 18:47:48 PDT
[Win] LayoutUnit.h(84) : warning C4756: overflow in constant arithmetic WinCairo EWS is failing to compile due to a compilation warning. C:\BW\WinCairo-EWS\build\Source\WebCore\platform\LayoutUnit.h(84) : error C2220: the following warning is treated as an error C:\BW\WinCairo-EWS\build\Source\WebCore\platform\LayoutUnit.h(84) : warning C4756: overflow in constant arithmetic
Attachments
Fujii Hironori
Comment 1 2023-05-06 19:06:10 PDT
We have an internal WinCairo clean Release build Jenkins bot. 263756@main doesn't have the warning, but 263759@main has. > C:\jenkins_slave\wincairo-main\Source\WebCore\platform\LayoutUnit.h(84) : warning C4756: overflow in constant arithmetic
Fujii Hironori
Comment 2 2023-05-06 19:46:11 PDT
EWS
Comment 3 2023-05-06 21:14:53 PDT
Committed 263770@main (d505e867ef82): <https://commits.webkit.org/263770@main> Reviewed commits have been landed. Closing PR #13543 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2023-05-06 21:15:21 PDT
Note You need to log in before you can comment on or make changes to this bug.