[Win] LayoutUnit.h(84) : warning C4756: overflow in constant arithmetic https://bugs.webkit.org/show_bug.cgi?id=256423

Unreviewed build fix for Windows port.

> WebCore\platform\LayoutUnit.h(84) : warning C4756: overflow in constant arithmetic

It seems that LayoutUnit::LayoutUnit(float) has to calculate "value *
kFixedPointDenominator" in double.

* Source/WebCore/platform/LayoutUnit.h:
(WebCore::LayoutUnit::LayoutUnit):
Removed the float version of constructor.

Canonical link: https://commits.webkit.org/263770@main